# early-alerts-rappi-project

./: .gitignore  LICENSE  README.md
DataAnalysis/: .gitignore  README.md  pyproject.toml
DataAnalysis/notebooks/: 00_data_understanding.ipynb  01_data_loading_quality_cleaning.ipynb  02_exploratory_analysis.ipynb  03_kpis_and_findings.ipynb
DataAnalysis/outputs/cleaned/: raw_data_clean.parquet  zone_info_clean.parquet  zone_polygons_clean.parquet
DataAnalysis/outputs/reports/: resumen_hallazgos_modulo1_1_pagina.md
DataAnalysis/outputs/tables/: eda_summary_zone.csv  p1_hour_saturation_frequency.csv  p1_zone_hour_saturation_frequency.csv  p1_zone_saturation_frequency.csv  p2_hour_control_ratio_lift.csv  p2_rain_bucket_ratio.csv  p3_zone_precipitation_sensitivity.csv  p4_daily_earnings_ratio.csv  p4_intraday_inefficiency_days.csv  p4_overspend_heatmap.csv  p4_under_investment_heatmap.csv  p5_earnings_rain_ratio_interaction.csv
DataAnalysis/src/: cleaning.py  config.py  feature_engineering.py  io_utils.py  plotting.py  validation.py
EarlyAlertsAPI/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
EarlyAlertsAPI/Outputs/reports/: Documentacion_Motor_Alertas_Tempranas.md  Motor_Reglas_y_Alertas.md
EarlyAlertsAPI/app/backend/: __init__.py  cli.py  main.py
EarlyAlertsAPI/app/backend/api/: alerts.py  config_routes.py  events.py  health.py  jobs.py  router.py
EarlyAlertsAPI/app/backend/core/: __init__.py  config.py  constants.py  models.py  rule_pack.py  zone_catalog.py
EarlyAlertsAPI/app/backend/decision/: README.md  earnings.py  (+4 more)
EarlyAlertsAPI/app/docs/: Documentation.md  Improvements.md
EarlyAlertsAPI/notebooks/: 01_alert_rules_motor_calibration.ipynb
TelegramAIAgent/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
TelegramAIAgent/app/: config.py  main.py
TelegramAIAgent/app/agent/: context_source.py  orchestrator.py
TelegramAIAgent/app/docs/: documentation.md  improvements.md  test_report.md
TelegramAIAgent/tests/: conftest.py
TelegramAIAgent/tests/integration/: test_pipeline.py
TelegramAIAgent/tests/unit/: test_consumer.py  test_context_source.py  test_llm_client.py  test_orchestrator.py  test_sender.py  test_system_prompt.py
(+40 files in other folders)
