[project]
name = "dataanalysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "openpyxl>=3.1.5",
    "pyarrow>=23.0.1",
    "scipy>=1.17.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
